// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContractOperations > should be able to render the component without items 1`] = `
<menu
  class="contract-operations s-MYVJhCZxEBFW"
/>
`;

exports[`ContractOperations > should render the \`ContractOperations\` component 1`] = `
<menu
  class="contract-operations s-MYVJhCZxEBFW"
>
  <li
    class="contract-operations__operation s-MYVJhCZxEBFW"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--normal dusk-icon-button-labeled contract-operations__operation-button"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--normal dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,7L17,12H14V16H10V12H7L12,7M19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21M19,19V5H5V19H19Z"
        />
      </svg>
      
      <!--&lt;Icon&gt;-->
       
      <span
        class="dusk-button__text"
      >
        Send
      </span>
      
    </button>
    <!--&lt;Button&gt;-->
     
  </li>
  <li
    class="contract-operations__operation s-MYVJhCZxEBFW"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button-labeled contract-operations__operation-button"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--normal dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,17L7,12H10V8H14V12H17L12,17M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M5,5V19H19V5H5Z"
        />
      </svg>
      
      <!--&lt;Icon&gt;-->
       
      <span
        class="dusk-button__text"
      >
        Receive
      </span>
      
    </button>
    <!--&lt;Button&gt;-->
     
  </li>
  <li
    class="contract-operations__operation s-MYVJhCZxEBFW"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--normal dusk-icon-button-labeled contract-operations__operation-button"
      disabled=""
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--normal dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 3C7.58 3 4 4.79 4 7V17C4 19.21 7.59 21 12 21S20 19.21 20 17V7C20 4.79 16.42 3 12 3M18 17C18 17.5 15.87 19 12 19S6 17.5 6 17V14.77C7.61 15.55 9.72 16 12 16S16.39 15.55 18 14.77V17M18 12.45C16.7 13.4 14.42 14 12 14C9.58 14 7.3 13.4 6 12.45V9.64C7.47 10.47 9.61 11 12 11C14.39 11 16.53 10.47 18 9.64V12.45M12 9C8.13 9 6 7.5 6 7S8.13 5 12 5C15.87 5 18 6.5 18 7S15.87 9 12 9Z"
        />
      </svg>
      
      <!--&lt;Icon&gt;-->
       
      <span
        class="dusk-button__text"
      >
        stake
      </span>
      
    </button>
    <!--&lt;Button&gt;-->
     
  </li>
  <li
    class="contract-operations__operation s-MYVJhCZxEBFW"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button-labeled contract-operations__operation-button"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--normal dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 13.09V7C20 4.79 16.42 3 12 3S4 4.79 4 7V17C4 19.21 7.59 21 12 21C12.46 21 12.9 21 13.33 20.94C13.12 20.33 13 19.68 13 19L13 18.95C12.68 19 12.35 19 12 19C8.13 19 6 17.5 6 17V14.77C7.61 15.55 9.72 16 12 16C12.65 16 13.27 15.96 13.88 15.89C14.93 14.16 16.83 13 19 13C19.34 13 19.67 13.04 20 13.09M18 12.45C16.7 13.4 14.42 14 12 14S7.3 13.4 6 12.45V9.64C7.47 10.47 9.61 11 12 11S16.53 10.47 18 9.64V12.45M12 9C8.13 9 6 7.5 6 7S8.13 5 12 5 18 6.5 18 7 15.87 9 12 9M22 20L19 23L16 20H18V16H20V20H22Z"
        />
      </svg>
      
      <!--&lt;Icon&gt;-->
       
      <span
        class="dusk-button__text"
      >
        unstake
      </span>
      
    </button>
    <!--&lt;Button&gt;-->
     
  </li>
  <li
    class="contract-operations__operation s-MYVJhCZxEBFW"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button-labeled contract-operations__operation-button"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--normal dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 13.09V7C20 4.79 16.42 3 12 3S4 4.79 4 7V17C4 19.21 7.59 21 12 21C12.46 21 12.9 21 13.33 20.94C13.12 20.33 13 19.68 13 19L13 18.95C12.68 19 12.35 19 12 19C8.13 19 6 17.5 6 17V14.77C7.61 15.55 9.72 16 12 16C12.65 16 13.27 15.96 13.88 15.89C14.93 14.16 16.83 13 19 13C19.34 13 19.67 13.04 20 13.09M18 12.45C16.7 13.4 14.42 14 12 14S7.3 13.4 6 12.45V9.64C7.47 10.47 9.61 11 12 11S16.53 10.47 18 9.64V12.45M12 9C8.13 9 6 7.5 6 7S8.13 5 12 5 18 6.5 18 7 15.87 9 12 9M22 20L19 23L16 20H18V16H20V20H22Z"
        />
      </svg>
      
      <!--&lt;Icon&gt;-->
       
      <span
        class="dusk-button__text"
      >
        withdraw rewards
      </span>
      
    </button>
    <!--&lt;Button&gt;-->
     
  </li>
</menu>
`;

exports[`ContractOperations > should use a default icon if the operation is not on the known list 1`] = `
<menu
  class="contract-operations s-MYVJhCZxEBFW"
>
  <li
    class="contract-operations__operation s-MYVJhCZxEBFW"
  >
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--normal dusk-icon-button-labeled contract-operations__operation-button"
      type="button"
    >
      <svg
        class="dusk-icon dusk-icon--size--normal dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z"
        />
      </svg>
      
      <!--&lt;Icon&gt;-->
       
      <span
        class="dusk-button__text"
      >
        Foo operation
      </span>
      
    </button>
    <!--&lt;Button&gt;-->
     
  </li>
</menu>
`;
